--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "gh-pages": "^1.1.0",
+    "mysql": "^2.18.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^3.4.1"
   },
   "description": "",
   "main": "index.js",
@@ -27,5 +30,17 @@
   "bugs": {
     "url": "https://github.com/dbailey25/Click-Pic/issues"
   },
-  "homepage": "https://dbailey25.github.io/Click-Pic"
+  "homepage": "https://dbailey25.github.io/Click-Pic",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
