--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gh-pages": "^1.1.0",
     "mysql": "^2.18.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1"
   },
